[package]
name = "RustyQLib"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.3"
probability = "0.18.0"
libm = "0.2.1"
chrono = {version = "0.4.22",features = ["serde"]}
csv = "1.1"
rand_chacha = "0.3.1"
rand_pcg = " 0.3.1"
clap = "2.33"
byteorder = "1.4.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1"
bincode = "1.3.1"
strum = "0.25"
strum_macros = "0.25"
ndarray = "0.15"
