[package]
name = "rustyqlib"
version = "0.0.2"
edition = "2021"
authors = ["Siddharth Singh"]
description = "RustyQLib is a lightweight yet robust quantitative finance library designed to price derivatives and perform risk analysis"
license = "MIT"
repository = "https://github.com/siddharthqs/RustyQLib"
readme = "README.md"
homepage = "https://github.com/siddharthqs/RustyQLib"
keywords = [
    "quantitative-finance",
    "derivatives",
    "monte-carlo",
    "black-scholes",
    "cli"
]
# crates.io categories must be from its controlled vocabulary
# (https://crates.io/category_slugs) -- the old values were rejected/ignored.
categories = ["mathematics", "science", "simulation", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustyqlib"
path = "src/lib.rs"

[[bin]]
name = "rustyqlib"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.3"
libm = "0.2.8"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.1"
rand_chacha = "0.3.1"
rand_pcg = " 0.3.1"
clap = "4.5"
byteorder = "1.4.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1"
bincode = "1.3.1"
strum = "0.25"
strum_macros = "0.25"
ndarray = "0.15"
assert_approx_eq = "1.1.0"
rayon = "1.5.1"
quick-xml = { version = "0.41.0", default-features = false }
toml = "0.8"
